--- a/app/views/languages/index.html.erb
+++ b/app/views/languages/index.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, "Languages") %>
 <h1>Languages</h1>
 
 <%= will_paginate %>
-<ul>
+<ul class="unstyled">
   <% @languages.each do |language| %>
     <li>
     <%= link_to language.name, language_path(language) %>
