--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,12 @@
     <nav class="nav-collapse">
       <ul class="nav">
         <li <%= "class=active" if yield(:title) == "Languages" %>><%= link_to "Languages", languages_path %></li>
+        <li <%= "class=active" if yield(:title) == "New link" %>><%= link_to "New link", new_link_path %></li>
       </ul>
       <ul class="nav pull-right">
+      <!--<li><%= form_for(:link) do |f| %>
+        <%= f.text_field :word1 %>
+      <% end %></li>-->
         <li <%= "class=active" if yield(:title) == "Contact" %>><%= link_to "Contact", contact_path %></li>
       </ul>
     </nav>
