--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,6 @@
 <header class="navbar navbar-fixed-top">
+<!--<header class="navbar navbar-fixed-top navbar-inverse">-->
+<!-- navbar-inverse make it black -->
 <div class="navbar-inner">
   <div class="container">
 
@@ -16,19 +18,33 @@
     <!-- Adding collapse class to nav make it open by default -->
     <nav class="nav-collapse">
       <ul class="nav">
-        <li <%= "class=active" if yield(:title) == "Languages" %>><%= link_to "Languages", languages_path %></li>
-        <li <%= "class=active" if yield(:title) == "New link" %>><%= link_to "New link", new_link_path %></li>
+        <li <%= "class=active" if yield(:title) == "Languages" %>>
+        <%= link_to "Languages", languages_path %></li>
+        <li <%= "class=active" if yield(:title) == "New link" %>>
+        <%= link_to "New link", new_link_path %></li>
       </ul>
       <ul class="nav pull-right">
-      <!--<li><%= form_for(:link) do |f| %>
-        <%= f.text_field :word1 %>
-      <% end %></li>-->
 
       <% if current_user %>
-        <li <%= "class=active" if yield(:title) == "Profile" %>>
-        <%= link_to "Profile", users_path(current_user) %>
-        <li <%= "class=active" if yield(:title) == "Sign out" %>>
-        <%= link_to "Sign out", signout_path %>
+        <li id="fat-menu" class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <%= current_user.name %> <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li>
+          <%= link_to "Profile", current_user %>
+          </li>
+          <li>
+          <%= link_to "Authentications", authentications_path %>
+          </li>
+          <li>
+          <%= link_to "Settings", edit_user_path(current_user) %>
+          </li>
+          <li class="divider"></li>
+          <li>
+          <%= link_to "Sign out", signout_path %>
+          </li>
+        </ul>
         </li>
       <% else %>
         <li <%= "class=active" if yield(:title) == "Sign in" %>>
@@ -36,7 +52,8 @@
         </li>
       <% end %>
 
-      <li <%= "class=active" if yield(:title) == "Contact" %>><%= link_to "Contact", contact_path %></li>
+      <li <%= "class=active" if yield(:title) == "Contact" %>>
+      <%= link_to "Contact", contact_path %></li>
       </ul>
     </nav>
   </div>
