--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,17 +8,18 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
-    </a>
+    <%= render 'layouts/header' %>
     <div class="container">
       <a href="https://github.com/blegat/openvoc">
         <img style="position: absolute; top: 32px; right: 0; border: 0;"
         src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
         alt="Fork me on GitHub">
-        <%= render 'layouts/header' %>
+      </a>
       <% flash.each do |key, value| %>
         <%= content_tag(:div, value, class: "alert alert-#{key}") %>
       <% end %>
       <%= yield %>
+      <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
