--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,9 @@
           <%= link_to "Profile", current_user %>
           </li>
           <li>
+          <%= link_to "Lists", lists_path %>
+          </li>
+          <li>
           <%= link_to "Authentications", authentications_path %>
           </li>
           <li>
