--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,13 @@
 <% provide(:title, 'List') %>
 <h1><%= @path %></h1>
+<% if @list %>
+  <% if @list.parent.nil? %>
+    <%= link_to "Go back to /", lists_path %>
+  <% else %>
+    <%= link_to "Go back to #{@list.parent.path}", @list.parent %>
+  <% end %>
+<% end %>
+
 <% if @new_list %>
   <%= form_for @new_list, url: path_to_create_list(@list) do |f| %>
     <%= f.label :name %>
@@ -10,10 +18,33 @@
 <% else %>
   <%= link_to 'New list here', path_for_new_list(@list) %>
 <% end %>
-<ul>
-  <% @lists.each do |list| %>
-    <li>
-    <%= link_to list.name, list %>
-    </li>
+
+<h2>Sublists</h2>
+<% if @lists.empty? %>
+  <p>No sublist.</p>
+<% else %>
+  <ul>
+    <% @lists.each do |list| %>
+      <li>
+      <%= link_to list.name, list %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+<% if @path != '/' %>
+  <h2>Words</h2>
+  <% if @words.empty? %>
+    <p>No word.</p>
+  <% else %>
+    <ul>
+      <% @words.each do |word| %>
+        <li>
+        <%= link_to word.content, word %>
+        </li>
+      <% end %>
+    </ul>
   <% end %>
-</ul>
+
+  <%= link_to "Train on this list", new_list_train_path(@list),
+    class: 'btn btn-large btn-primary' %>
+<% end %>
