--- a/app/views/trains/create.html.erb
+++ b/app/views/trains/create.html.erb
@@ -49,4 +49,4 @@ The average succeed with an average of
   class: 'btn btn-large btn-primary' %>
 <br />
 <br />
-<%= link_to "Back to list", @list %>
+<%= link_to "Back to list", @list, class: "btn" %>
