--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -1,6 +1,12 @@
 <% provide(:title, @word.content) %>
 <h1><%= @word.language.name %></h1>
-<h2><%= @word.content %>, created by <%= @word.owner.name %></h2>
+<h2>
+  <%= @word.content %>,
+  created by <%= @word.owner.name %>
+  <% if @word.owner == current_user %>
+    <%= link_to "Destroy it", word_path(@word), class: "btn", method: :delete %>
+  <% end %>
+</h2>
 <div class="row">
   <div class="span3">
     <h3>Links</h3>
