--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -3,8 +3,8 @@
   <h1>Contact us!</h1>
   <p>
   You can reach us through our
-  <a href="https://github.com/blegat/openvoc/issues">bug tracker</a>
+  <%= link_to_bug_tracker 'bug tracker' %>
   or through our
-  <a href="mailto:openvoc@googlegroups.com">mailing list</a>.
+  <%= link_to_mailing_list 'mailing list' %>.
   </p>
 </div>
