--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= render 'layouts/header' %>
     <div class="container">
       <a href="https://github.com/blegat/openvoc">
-        <img style="position: absolute; top: 32px; right: 0; border: 0;"
+        <img style="position: fixed; top: 32px; right: 0; border: 0;"
         src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
         alt="Fork me on GitHub">
       </a>
