--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,9 @@
-<p><%= current_user.name %></p>
-<p><%= current_user.email %></p>
+<table class="table table-bordered">
+  <tr><th>Nom</th><td><%= @user.name %></td></tr>
+
+  <tr style="background-color:#F1F1F1;">
+    <th>Email</th><td><%= @user.email %></td>
+  </tr>
+</table>
+
 <%= link_to "Add authentications methods", authentications_path %>
