--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,11 @@
 <% provide(:title, "New user") %>
 
 <h1>New user</h1>
-<%= debug @user %>
-<%= debug session.to_s %>
-<%= debug @omniauth.to_s %>
 <%= form_for :user, url: users_path do |f| %>
+  <%= f.label :email %>
+  <%= f.text_field :email, value: session['email'] %>
   <%= f.label :name %>
-  <%= f.text_field(:name) %>
+  <%= f.text_field :name, value: session['name'] %>
   <br />
   <%= f.submit "Create", class: "btn btn-large btn-primary" %>
 <% end %>
