Build registrations/edit/create and users/edit

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
 <small>
-	<a href="http://openvoc.herokuapp.com/">Openvoc</a>
+	<a href="http://openvoc.gp2mv3.com/">Openvoc</a>
 	by Benoît Legat
 </small>
 <nav>
