Revert "Add facebook login"
This reverts commit edef6fb093419c25c5b4dbeaada0f892199d83e3.

--- a/app/views/authentications/index.html.erb
+++ b/app/views/authentications/index.html.erb
@@ -55,9 +55,7 @@
       </a>
     </div>
     <% @methods = ['open_id', 'twitter', 'github', 'google_oauth2']
-    if Rails.env.production?
-      @methods.append('facebook')
-    else
+    unless Rails.env.production?
       @methods.prepend('developer')
     end %>
     <% @methods.each do |provider| %>
