--- a/app/views/languages/_select.html.erb
+++ b/app/views/languages/_select.html.erb
@@ -1,7 +1,9 @@
-<%= f.label "language#{n}_id", "Language #{['from','to'][n-1]}" %>
-<%= if language
-      f.collection_select("language#{n}_id", Language.all, :id, :name,
-                          selected: language.id)
-    else
-      f.collection_select("language#{n}_id", Language.all, :id, :name)
-    end %>
+<div class="form-group">
+  <%= f.label "language#{n}_id", "Language #{['from','to'][n-1]}" %>
+  <%= if language
+        f.collection_select("language#{n}_id", Language.all, :id, :name,
+                            selected: language.id)
+      else
+        f.collection_select("language#{n}_id", Language.all, :id, :name)
+      end %>
+</div>
